# dstt_tools

./: .gitignore  Readme.md  pyproject.toml  run_tests.py  spec.md  system_lib.py
src/dstt_tools_core/: __init__.py  interfaces.py  provider.py  registry.py  tool_spec.py  tools.md  tools.py
src/dstt_tools_core/resources/: ollama.py  registry.py  resources.md
src/dstt_tools_core/shell/: runner_spec.md  tool_runner.py
src/dstt_tools_core/tool_specs/: __init__.py  iterate_specs.py  math_specs.py  reason_specs.py  route_specs.py  strategy_specs.py
src/dstt_tools_core/tools/: __init__.py  base.py  iterator_tools.md  iterator_tools.py  router_tools.md  router_tools.py
src/dstt_tools_core/tools/bootstrap/: bootstrap.md  bootstrap.py
src/dstt_tools_core/tools/reason/: ReasonSpec_spec.md  capability.md  capability_tools.py  planner_spec.md  reason.md  reason_runtime.md  reason_spec.py  reason_tools.py  validator.md  validators.py
src/dstt_tools_core/tools/reason/specs/: capability_resolution.yaml  planArithmetic.yaml  strategySelect.yaml
src/dstt_tools_core/tools/system/: math.py  system.py
tests/: test_capability.py  test_core.py  test_default_planner.py  test_iterator_tools.py  test_kernal_with_dstt_library.py  test_reason_runtime.py  test_reason_spec.py  test_reason_spec_yaml.py  test_reason_tools.py  test_resources.py  test_router_tools.py  test_runner.py  test_tool_spec.py  test_validators.py
